# ai-cli-installer

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.ps1  dev.ps1  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
crates/installer-core/: Cargo.toml  fixes.json
crates/installer-core/src/: app_state.rs  downloader.rs  error.rs  fixes.rs  install_diagnostics.rs  installer.rs  lib.rs  mirrors.rs  npm_installer.rs  platform.rs  proc.rs  progress.rs  verifier.rs  version_cache.rs
crates/installer-core/src/env_manager/: mod.rs  windows.rs
crates/installer-core/src/tools/: claude_code.rs  codex.rs  spec.rs
crates/installer-web/: Cargo.toml
crates/installer-web/src/: config.rs  main.rs  routes.rs  static_files.rs  ws.rs
src/: App.svelte  app.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  downloader.rs  fixes.rs  install_diagnostics.rs  lib.rs  log_buffer.rs  main.rs  mirrors.rs  npm_installer.rs  presets.rs  upstream.rs
src-tauri/src/env_manager/: mod.rs  unix.rs  windows.rs
src-tauri/src/tools/: claude_code.rs  codex.rs  mod.rs  spec.rs
src/lib/: api.ts  devMode.ts  page.ts  stores.ts  theme.ts  types.ts  updateStore.ts
src/lib/components/: About.svelte  FixesSection.svelte  LogViewer.svelte  MirrorStatus.svelte  PresetSection.svelte  ProgressBar.svelte  Sidebar.svelte  ToolCard.svelte  UpdateIndicator.svelte  UpdateToast.svelte
src/lib/services/: tauriApi.ts  webApi.ts
