[package]
name = "ai-cli-installer"
version = "0.4.1"
description = "One-click installer for Claude Code with mirror acceleration"
authors = ["zuoliangyu"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ai_cli_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
installer-core = { path = "../crates/installer-core" }

tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
