[package]
name = "installer-core"
version = "0.4.0"
edition = "2021"
rust-version = "1.77"
description = "Pure-logic core for ai-cli-installer (no Tauri / no HTTP server)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
tracing = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
zstd = "0.13"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
